--- a/NLP_Exercise.ipynb
+++ b/NLP_Exercise.ipynb
@@ -30,10 +30,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Qnpl0yA5mnQU",
-        "outputId": "1b7183a1-c68d-497f-c0a4-e74d339850ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d5a2a4ad-7933-4b06-8140-9c8dfbc8bb55"
       },
       "source": [
         "import nltk\n",
@@ -41,13 +41,13 @@
         "from nltk.stem import PorterStemmer\n",
         "from nltk.tokenize import sent_tokenize, word_tokenize"
       ],
-      "execution_count": 37,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -60,47 +60,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c31a8c4-903e-4de2-e3de-3942f867ea49"
+        "outputId": "0c239440-5956-43e1-ccd8-edbf9d9804a3"
       },
       "source": [
         "!rm -r csc466-project\n",
         "!git clone https://github.com/ANGELLOPARR/csc466-project.git"
       ],
-      "execution_count": 1,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "rm: cannot remove 'csc466-project': No such file or directory\n",
             "Cloning into 'csc466-project'...\n",
-            "remote: Enumerating objects: 68, done.\u001b[K\n",
-            "remote: Counting objects: 100% (68/68), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (62/62), done.\u001b[K\n",
-            "remote: Total 68 (delta 25), reused 25 (delta 4), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (68/68), done.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CP0IrVG7i3Pr",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "67e351aa-9d84-483b-bba9-3e3b1d8dfc18"
-      },
-      "source": [
-        "!ls"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "csc466-project\tsample_data\n"
+            "remote: Enumerating objects: 71, done.\u001b[K\n",
+            "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (65/65), done.\u001b[K\n",
+            "remote: Total 71 (delta 26), reused 25 (delta 4), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (71/71), done.\n"
           ],
           "name": "stdout"
         }
@@ -114,7 +90,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 137
         },
-        "outputId": "925c2cb0-42b7-4e0d-c9e4-89b9ccfb5e0d"
+        "outputId": "bbe81a4a-4306-4dd1-b06b-b21248c9959c"
       },
       "source": [
         "import numpy as np # linear algebra\n",
@@ -125,7 +101,7 @@
         "dataset.shape  #(5728, 2)\n",
         "dataset.iloc[-1]['text']"
       ],
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +116,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 45
         }
       ]
     },
@@ -157,17 +133,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "A6XgbIR-kxZf",
-        "outputId": "84fea58b-11e7-4a23-8ea5-ea022b252201",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "0a7489ce-3931-4a30-caf0-580cdf183233"
       },
       "source": [
         "dataset['text'] = dataset['text'].str.replace('Subject: ', '')\n",
         "dataset"
       ],
-      "execution_count": 18,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,7 +252,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 46
         }
       ]
     },
@@ -290,31 +266,40 @@
         "    stemmer = PorterStemmer()\n",
         "    tokenized = nltk.word_tokenize(text)\n",
         "    stemmed = [stemmer.stem(word) for word in tokenized]\n",
-        "    return stemmed"
+        "    return ' '.join(stemmed)"
       ],
-      "execution_count": 41,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MYsiVIqBlvJw",
-        "outputId": "6bd61513-de45-4ee6-e0f0-52c2fa9f63e9",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 171
+        },
+        "outputId": "829cd2bb-32f0-42b5-a93a-74e66f683e02"
       },
       "source": [
         "stem_text(dataset.iloc[0]['text'])"
       ],
-      "execution_count": 42,
+      "execution_count": 50,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "['natur', 'irresist', 'your', 'corpor', 'ident', 'lt', 'is', 'realli', 'hard', 'to', 'recollect', 'a', 'compani', ':', 'the', 'market', 'is', 'full', 'of', 'suqgest', 'and', 'the', 'inform', 'isoverwhelminq', ';', 'but', 'a', 'good', 'catchi', 'logo', ',', 'stylish', 'statloneri', 'and', 'outstand', 'websit', 'will', 'make', 'the', 'task', 'much', 'easier', '.', 'we', 'do', 'not', 'promis', 'that', 'havinq', 'order', 'a', 'iogo', 'your', 'compani', 'will', 'automaticaili', 'becom', 'a', 'world', 'ieader', ':', 'it', 'isguit', 'ciear', 'that', 'without', 'good', 'product', ',', 'effect', 'busi', 'organ', 'and', 'practic', 'aim', 'it', 'will', 'be', 'hotat', 'nowaday', 'market', ';', 'but', 'we', 'do', 'promis', 'that', 'your', 'market', 'effort', 'will', 'becom', 'much', 'more', 'effect', '.', 'here', 'is', 'the', 'list', 'of', 'clear', 'benefit', ':', 'creativ', ':', 'hand', '-', 'made', ',', 'origin', 'logo', ',', 'special', 'done', 'to', 'reflect', 'your', 'distinct', 'compani', 'imag', '.', 'conveni', ':', 'logo', 'and', 'stationeri', 'are', 'provid', 'in', 'all', 'format', ';', 'easi', '-', 'to', '-', 'use', 'content', 'manag', 'system', 'letsyou', 'chang', 'your', 'websit', 'content', 'and', 'even', 'it', 'structur', '.', 'prompt', ':', 'you', 'will', 'see', 'logo', 'draft', 'within', 'three', 'busi', 'day', '.', 'afford', ':', 'your', 'market', 'break', '-', 'through', 'shouldn', \"'\", 't', 'make', 'gap', 'in', 'your', 'budget', '.', '100', '%', 'satisfact', 'guarante', ':', 'we', 'provid', 'unlimit', 'amount', 'of', 'chang', 'with', 'no', 'extra', 'fee', 'for', 'you', 'to', 'be', 'surethat', 'you', 'will', 'love', 'the', 'result', 'of', 'thi', 'collabor', '.', 'have', 'a', 'look', 'at', 'our', 'portfolio', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', 'not', 'interest', '.', '.', '.', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_']\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"natur irresist your corpor ident lt is realli hard to recollect a compani : the market is full of suqgest and the inform isoverwhelminq ; but a good catchi logo , stylish statloneri and outstand websit will make the task much easier . we do not promis that havinq order a iogo your compani will automaticaili becom a world ieader : it isguit ciear that without good product , effect busi organ and practic aim it will be hotat nowaday market ; but we do promis that your market effort will becom much more effect . here is the list of clear benefit : creativ : hand - made , origin logo , special done to reflect your distinct compani imag . conveni : logo and stationeri are provid in all format ; easi - to - use content manag system letsyou chang your websit content and even it structur . prompt : you will see logo draft within three busi day . afford : your market break - through shouldn ' t make gap in your budget . 100 % satisfact guarante : we provid unlimit amount of chang with no extra fee for you to be surethat you will love the result of thi collabor . have a look at our portfolio _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ not interest . . . _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
         }
       ]
     },
