--- a/NLP_Exercise.ipynb
+++ b/NLP_Exercise.ipynb
@@ -33,21 +33,51 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d5a2a4ad-7933-4b06-8140-9c8dfbc8bb55"
+        "outputId": "da6d0ed4-ff46-4001-fbee-f418ed9f5050"
       },
       "source": [
         "import nltk\n",
+        "import spacy\n",
         "nltk.download('punkt')\n",
         "from nltk.stem import PorterStemmer\n",
-        "from nltk.tokenize import sent_tokenize, word_tokenize"
+        "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+        "\n",
+        "!python -m spacy download en_core_web_sm\n",
+        "nlp = spacy.load(\"en_core_web_sm\")"
       ],
-      "execution_count": 43,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "Requirement already satisfied: en_core_web_sm==2.2.5 from https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz#egg=en_core_web_sm==2.2.5 in /usr/local/lib/python3.7/dist-packages (2.2.5)\n",
+            "Requirement already satisfied: spacy>=2.2.2 in /usr/local/lib/python3.7/dist-packages (from en_core_web_sm==2.2.5) (2.2.4)\n",
+            "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.0)\n",
+            "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.5)\n",
+            "Requirement already satisfied: thinc==7.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (7.4.0)\n",
+            "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.5)\n",
+            "Requirement already satisfied: plac<1.2.0,>=0.9.6 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.1.3)\n",
+            "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (3.0.5)\n",
+            "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (2.0.5)\n",
+            "Requirement already satisfied: blis<0.5.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (0.4.1)\n",
+            "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (4.41.1)\n",
+            "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (2.23.0)\n",
+            "Requirement already satisfied: numpy>=1.15.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.19.5)\n",
+            "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (0.8.2)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (57.0.0)\n",
+            "Requirement already satisfied: importlib-metadata>=0.20; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (4.0.1)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (2020.12.5)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (1.24.3)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.4.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.7.4.3)\n",
+            "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+            "You can now load the model via spacy.load('en_core_web_sm')\n"
           ],
           "name": "stdout"
         }
@@ -60,23 +90,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c239440-5956-43e1-ccd8-edbf9d9804a3"
+        "outputId": "7e09b448-8938-41aa-8cc2-e84d22a55d56"
       },
       "source": [
         "!rm -r csc466-project\n",
         "!git clone https://github.com/ANGELLOPARR/csc466-project.git"
       ],
-      "execution_count": 44,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'csc466-project'...\n",
-            "remote: Enumerating objects: 71, done.\u001b[K\n",
-            "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (65/65), done.\u001b[K\n",
-            "remote: Total 71 (delta 26), reused 25 (delta 4), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (71/71), done.\n"
+            "remote: Enumerating objects: 74, done.\u001b[K\n",
+            "remote: Counting objects: 100% (74/74), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (68/68), done.\u001b[K\n",
+            "remote: Total 74 (delta 28), reused 25 (delta 4), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (74/74), done.\n"
           ],
           "name": "stdout"
         }
@@ -88,9 +118,9 @@
         "id": "qISnP5cXbdTZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 137
+          "height": 103
         },
-        "outputId": "bbe81a4a-4306-4dd1-b06b-b21248c9959c"
+        "outputId": "384167d2-2f45-4d4c-d6e0-73b41ad16864"
       },
       "source": [
         "import numpy as np # linear algebra\n",
@@ -101,7 +131,7 @@
         "dataset.shape  #(5728, 2)\n",
         "dataset.iloc[-1]['text']"
       ],
-      "execution_count": 45,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +146,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 8
         }
       ]
     },
@@ -137,13 +167,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "0a7489ce-3931-4a30-caf0-580cdf183233"
+        "outputId": "0041ed10-7a16-42c3-e2f5-5cac6ce1a175"
       },
       "source": [
         "dataset['text'] = dataset['text'].str.replace('Subject: ', '')\n",
         "dataset"
       ],
-      "execution_count": 46,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +282,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 9
         }
       ]
     },
@@ -268,7 +298,7 @@
         "    stemmed = [stemmer.stem(word) for word in tokenized]\n",
         "    return ' '.join(stemmed)"
       ],
-      "execution_count": 49,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -277,14 +307,14 @@
         "id": "MYsiVIqBlvJw",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 171
+          "height": 103
         },
-        "outputId": "829cd2bb-32f0-42b5-a93a-74e66f683e02"
+        "outputId": "fce70acf-ac73-45c4-fe07-8b6b0f8a12b9"
       },
       "source": [
         "stem_text(dataset.iloc[0]['text'])"
       ],
-      "execution_count": 50,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,14 +329,61 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fl4sVRzLoBvL"
+        "id": "oFgCCRmawGGQ"
+      },
+      "source": [
+        "def lemmatize_text(text):\n",
+        "  doc = nlp(text)\n",
+        "\n",
+        "  lemmed = [token.lemma_ if token.lemma_ != '-PRON-' else token.text for token in doc]\n",
+        "  return ' '.join(lemmed)"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MX-zO1c5x6o-",
+        "outputId": "3b306543-9df3-463d-b7f2-786592216493",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 103
+        }
+      },
+      "source": [
+        "lemmatize_text(dataset.iloc[0]['text'])"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"naturally irresistible your corporate identity   lt be really hard to recollect a company : the   market be full of suqgestion and the information isoverwhelminq ; but a good   catchy logo , stylish statlonery and outstanding website   will make the task much easy .   we do not promise that havinq order a iogo your   company will automaticaily become a world ieader : it isguite ciear that   without good product , effective business organization and practicable aim it   will be hotat nowadays market ; but we do promise that your marketing effort   will become much more effective . here be the list of clear   benefit : creativeness : hand - make , original logo , specially do   to reflect your distinctive company image . convenience : logo and stationery   be provide in all format ; easy - to - use content management system letsyou   change your website content and even its structure . promptness : you   will see logo draft within three business day . affordability : your   marketing break - through shouldn ' t make gap in your budget . 100 % satisfaction   guarantee : we provide unlimited amount of change with no extra fee for you to   be surethat you will love the result of this collaboration . have a look at our   portfolio _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ not interested . . . _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B5sdcXLQx9zD"
       },
       "source": [
         ""
