--- a/NLP_Exercise.ipynb
+++ b/NLP_Exercise.ipynb
@@ -33,7 +33,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b9c0ad9-ebd3-448c-8ff8-6e4a8d155924"
+        "outputId": "010d77e1-2712-47df-d4a8-0ddbab342091"
       },
       "source": [
         "import nltk\n",
@@ -42,11 +42,12 @@
         "from nltk.stem import PorterStemmer\n",
         "from nltk.tokenize import sent_tokenize, word_tokenize\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
         "!python -m spacy download en_core_web_sm\n",
         "nlp = spacy.load(\"en_core_web_sm\")"
       ],
-      "execution_count": 39,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,26 +56,26 @@
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "Requirement already satisfied: en_core_web_sm==2.2.5 from https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz#egg=en_core_web_sm==2.2.5 in /usr/local/lib/python3.7/dist-packages (2.2.5)\n",
             "Requirement already satisfied: spacy>=2.2.2 in /usr/local/lib/python3.7/dist-packages (from en_core_web_sm==2.2.5) (2.2.4)\n",
-            "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (0.8.2)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (57.0.0)\n",
-            "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (2.23.0)\n",
             "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (4.41.1)\n",
-            "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (2.0.5)\n",
-            "Requirement already satisfied: plac<1.2.0,>=0.9.6 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.1.3)\n",
-            "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.0)\n",
             "Requirement already satisfied: numpy>=1.15.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.19.5)\n",
-            "Requirement already satisfied: thinc==7.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (7.4.0)\n",
-            "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (3.0.5)\n",
-            "Requirement already satisfied: blis<0.5.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (0.4.1)\n",
+            "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (0.8.2)\n",
+            "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (2.23.0)\n",
+            "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.0)\n",
             "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.5)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (57.0.0)\n",
+            "Requirement already satisfied: plac<1.2.0,>=0.9.6 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.1.3)\n",
+            "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (2.0.5)\n",
+            "Requirement already satisfied: blis<0.5.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (0.4.1)\n",
+            "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (3.0.5)\n",
+            "Requirement already satisfied: thinc==7.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (7.4.0)\n",
             "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->en_core_web_sm==2.2.5) (1.0.5)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (2020.12.5)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->en_core_web_sm==2.2.5) (2020.12.5)\n",
             "Requirement already satisfied: importlib-metadata>=0.20; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (4.0.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.7.4.3)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.4.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->en_core_web_sm==2.2.5) (3.7.4.3)\n",
             "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the model via spacy.load('en_core_web_sm')\n"
           ],
@@ -402,10 +403,12 @@
         "stemmed_df['stemmed'] = stemmed_corpus\n",
         "stemmed_df.drop(['text'], axis=1, inplace=True)\n",
         "\n",
-        "training_stemmed = stemmed_df['stemmed']\n",
-        "testing_stemmed = stemmed_df['spam']"
+        "X = stemmed_df['stemmed']\n",
+        "t = stemmed_df['spam']\n",
+        "\n",
+        "X_train_stemmed, X_test_stemmed, t_train_stemmed, t_test_stemmed = train_test_split(X, t, test_size=0.2, random_state=0)"
       ],
-      "execution_count": 56,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -418,10 +421,12 @@
         "lemmed_df['lemmed'] = lemmed_corpus\n",
         "lemmed_df.drop(['text'], axis=1, inplace=True)\n",
         "\n",
-        "training_lemmed = lemmed_df['lemmed']\n",
-        "testing_lemmed = lemmed_df['spam']"
+        "X = lemmed_df['lemmed']\n",
+        "t = lemmed_df['spam']\n",
+        "\n",
+        "X_train_lemmed, X_test_lemmed, t_train_lemmed, t_test_lemmed = train_test_split(X, t, test_size=0.2, random_state=0)"
       ],
-      "execution_count": 57,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -430,11 +435,14 @@
         "id": "JCmUP9Zj5j3F"
       },
       "source": [
-        "stemmed_vectorizer = TfidfVectorizer(stop_words='english')\n",
-        "stemmed_vectorizer.fit(training_stemmed)\n",
-        "X_stemmed = stemmed_vectorizer.transform(training_stemmed, testing_stemmed)"
+        "stemmed_vectorizer = TfidfVectorizer(max_features=5000, stop_words='english')\n",
+        "\n",
+        "stemmed_vectorizer.fit(X_train_stemmed)\n",
+        "\n",
+        "X_train_stemmed = stemmed_vectorizer.transform(X_train_stemmed)\n",
+        "X_test_stemmed = stemmed_vectorizer.transform(X_test_stemmed)"
       ],
-      "execution_count": 46,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -443,141 +451,37 @@
         "id": "2e9WRo2a5zbH"
       },
       "source": [
-        "lemmed_vectorizer = TfidfVectorizer(stop_words='english')\n",
-        "Y = lemmed_vectorizer.fit_transform(lemmed_corpus)"
+        "lemmed_vectorizer = TfidfVectorizer(max_features=5000, stop_words='english')\n",
+        "\n",
+        "lemmed_vectorizer.fit(X_train_lemmed)\n",
+        "\n",
+        "X_train_lemmed = stemmed_vectorizer.transform(X_train_lemmed)\n",
+        "X_test_lemmed = stemmed_vectorizer.transform(X_test_lemmed)"
       ],
-      "execution_count": 48,
+      "execution_count": 63,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ho0gJX_96yeS",
-        "outputId": "e3d365d5-9681-458f-d35b-b3eaf72ef4c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+          "height": 51
+        },
+        "id": "K4MpjFch8PrQ",
+        "outputId": "d36ea008-22ed-4c6b-e126-6b3839d64613"
       },
       "source": [
-        ""
+        "display(X_train_lemmed)"
       ],
-      "execution_count": 55,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>text</th>\n",
-              "      <th>spam</th>\n",
-              "      <th>lemmed</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>naturally irresistible your corporate identity...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>naturally irresistible your corporate identity...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>the stock trading gunslinger  fanny is merrill...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>the stock trading gunslinger   fanny be merril...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>unbelievable new homes made easy  im wanting t...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>unbelievable new home make easy   i be want to...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4 color printing special  request additional i...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4 color printing special   request additional ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>do not have money , get software cds from here...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>do not have money , get software cd from here ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5723</th>\n",
-              "      <td>re : research and development charges to gpg  ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>re : research and development charge to gpg   ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5724</th>\n",
-              "      <td>re : receipts from visit  jim ,  thanks again ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>re : receipt from visit   jim ,   thank again ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5725</th>\n",
-              "      <td>re : enron case study update  wow ! all on the...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>re : enron case study update   wow ! all on th...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5726</th>\n",
-              "      <td>re : interest  david ,  please , call shirley ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>re : interest   david ,   please , call shirle...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5727</th>\n",
-              "      <td>news : aurora 5 . 2 update  aurora version 5 ....</td>\n",
-              "      <td>0</td>\n",
-              "      <td>news : aurora 5 . 2 update   aurora version 5 ...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5728 rows × 3 columns</p>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "                                                   text  ...                                             lemmed\n",
-              "0     naturally irresistible your corporate identity...  ...  naturally irresistible your corporate identity...\n",
-              "1     the stock trading gunslinger  fanny is merrill...  ...  the stock trading gunslinger   fanny be merril...\n",
-              "2     unbelievable new homes made easy  im wanting t...  ...  unbelievable new home make easy   i be want to...\n",
-              "3     4 color printing special  request additional i...  ...  4 color printing special   request additional ...\n",
-              "4     do not have money , get software cds from here...  ...  do not have money , get software cd from here ...\n",
-              "...                                                 ...  ...                                                ...\n",
-              "5723  re : research and development charges to gpg  ...  ...  re : research and development charge to gpg   ...\n",
-              "5724  re : receipts from visit  jim ,  thanks again ...  ...  re : receipt from visit   jim ,   thank again ...\n",
-              "5725  re : enron case study update  wow ! all on the...  ...  re : enron case study update   wow ! all on th...\n",
-              "5726  re : interest  david ,  please , call shirley ...  ...  re : interest   david ,   please , call shirle...\n",
-              "5727  news : aurora 5 . 2 update  aurora version 5 ....  ...  news : aurora 5 . 2 update   aurora version 5 ...\n",
-              "\n",
-              "[5728 rows x 3 columns]"
+              "<4582x26201 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 263157 stored elements in Compressed Sparse Row format>"
             ]
           },
           "metadata": {
@@ -589,7 +493,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K4MpjFch8PrQ"
+        "id": "Sy3GA7jbBVx9"
       },
       "source": [
         ""
